# SportsQuant-AI

./: .gitignore  alembic.ini  git  pyproject.toml  sportsquant.db  tatus
alembic/: env.py
alembic/versions/: 7fb95318bd4b_initial_schema.py
docs/architecture/: adr-0001-season-context.md  adr-0002-teamseason-aggregate.md  adr-003-historical-data-pipeline.md  adr-004-storage-separation.md  dataset-generation.md  domain-model.md  feature-engineering.md  machine-learning.md  persistence-layer.md  pipeline-execution-framework.md  roadmap.md  season-domain.md
docs/design/: dataset-row.md  dataset.md
docs/development/: AI_ONBOARDING.md  AI_WORKFLOW.md  CHATGPT_ARCHITECT.md  PROJECT_STATE.md
docs/specifications/: dataset-model.md
scripts/: demo_game_repository.py  demo_historical_pipeline.py  demo_persistence_metadata.py  demo_players.py  demo_record.py  demo_record_validation.py  demo_season.py  demo_team_season.py  demo_team_season_repository.py  discover_schedule_endpoints.py  discover_season_endpoints.py  discover_standings_endpoints.py  inspect_boxscore_traditional.py  inspect_endpoint.py  inspect_game_discovery.py  inspect_game_summary.py  inspect_gamefinder.py  inspect_season_endpoints.py  test_nba_client.py  test_team_game_stats_parser.py
src/sportsquant/: main.py
tests/: test_player_service.py
tests/datasets/: test_dataset.py  test_dataset_row.py
tests/features/: test_calculators.py  test_team_game_feature.py  test_team_game_feature_builder.py  test_team_game_feature_enricher.py
tests/models/: test_record.py  test_standing.py  test_streak.py  (+1 more)
(+106 files in other folders)
