[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sportsquant"
version = "0.1.0"
description = "SportsQuant-AI"
requires-python = ">=3.12"

dependencies = [
    "requests>=2.34.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.16,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]